update auth documentation
